# mesh2D_arrangement_python

./: README.md  arrangement.py  config.py  pyproject.toml
example/: main.py
example/from_model/: fitting2.mtl  fitting3.mtl  fitting4.mtl  main.py  main_upper_envelope.py
example/from_polygon/: main.py
src/arrangement2D/: arrangement2D.py  config.py  snap.py  upper_envelope.py  util.py
